# e-voting

./: .dockerignore  .gitignore  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  SUPABASE_SETUP.md  docker-compose.yaml  docker-compose.yml  env.example  env.local.example  next.config.ts  package-lock.json  package.json  proxy.ts
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  config.py  crud.py  database.py  deps.py  email_utils.py  main.py  models.py  password_reset.py  schemas.py
backend/app/api/: __init__.py  auth_router.py  deps.py  organizations.py  route.py  routes.py  users.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  health.py  organizations.py
backend/app/api/endpoints/v1/: health.py  organization.py  system.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  access.py  admin_audit_log.py  authorized_system.py  ballot.py  candidate.py  election.py  election_role.py  organization.py  organization_member.py  organization_settings.py  otp_verification.py  system.py  system_audit_log.py  system_log.py  user.py  user_audit_log.py  user_permission.py  voter.py
backend/app/schemas/: auth.py  organization.py  otp.py  system.py
backend/app/services/: email.py
backend/app/services/mail/: __init__.py  service.py
backend/app/services/mail/templates/: __init__.py  layout.py  (+3 more)
backend/app/services/mail_templates/: layout.py  verification.py  welcome.py
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
(+341 files in other folders)
