[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-process = "2"
mac_address = "1.1.8"
sysinfo = "0.36.1"
get_if_addrs = "0.5.3"

[profile.dev.package.scrypt]
opt-level = 3
